Fix right align

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -126,7 +126,7 @@ button, input {
     
     padding: 10px;
     margin: 10px;
-    width: 100%;
+    width: 90%;
 }
 
 .search-input textarea:focus, input:focus {
